2010-09-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_alloc.c: 
	Updated (c) year

2010-09-07  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/include/libxnee/xnee_settings.h
	(XNEE_NR_OF_XINPUT_DEVICES): 
	Adding XNEE_NR_OF_XINPUT_DEVICES as the max 
	number of xinput devices handled

2010-09-01  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/test/print.c (test_printfuns): 
	Typo fix:  reurn => return
	(main): printf typo and formatting 

	* libxnee/include/libxnee/xnee.h: 
	Including xnee_settings.h to get the nr of xinput devices

2010-08-31  Henrik Sandklef  <hesa@sandklef.com>

	* AUTHORS (Authors): 	
	Added Tuukka Pasanen to contributors

	* libxnee/test/print.c: 
	Added return 0 at the end of some function body
	Added (c) and license notice

	* libxnee/test/test_feedback.c (test_setfeedback): 
	Added return 0 at the end of the function body

	* libxnee/test/test_all.c (test_all): 
	Added return 0 at the end of the function body

	* libxnee/test/libtest.c (test_xnee_data): 
	Added return XNEE_OK at the end
	Added (c) and license notice

	* gnee/src/gnee_xnee.c (gnee_get_grab): 
	Added missing return values

	* cnee/src/main.c (cnee_handle_err): 
	function now returns void 
	we will discard any errors in the function anyway

	* devel-scripts/setup-xi2.sh: 
	Script to setup and unsetup (-d) xinput devices

	* libxnee/src/Makefile.am:
	Merged xinput-2 branch

	* libxnee/src/xnee.c:
	Removed funs: xnee_check_true, xnee_check_false

	* libxnee/src/xnee_display.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_error.c: 
	Updated (c) years to include 2010
	New error code: XNEE_CLI_ERROR

	* libxnee/src/xnee_expr.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_fake.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_range.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_replay.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_session.c: 
	Merged xinput-2 branch

	* libxnee/src/xnee_utils.c (xnee_check_true): 